--- a/calculator-app-main/css/style.css
+++ b/calculator-app-main/css/style.css
@@ -19,6 +19,39 @@
 
 body {
     background-color: var(--color-theme1-background-blue);
+    color: var(--color-theme1-text-blue);
+    margin: 5% 30%;
+}
+
+header h1 {
+    font-size: 5vw;
     color: var(--color-theme1-text-white);
+    margin-bottom: 2vw;
+    text-align: center;
+}
+
+datalist {
+    grid-area: themes; 
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    writing-mode: vertical-lr;
+}
+
+option {
+    transform: rotate(270deg);
+    color: var(--color-theme1-text-white);
+}
+
+#calc {
+    color: var(--color-theme1-text-white);
+}
+
+#theme-label {
+    color: var(--color-theme1-text-white);
+}
+
+.button {
+    background-color: var(--color-theme1-text-white);
 
 }
