--- a/calculator-app-main/css/style.css
+++ b/calculator-app-main/css/style.css
@@ -1,15 +1,15 @@
-:root {
-    --color-theme1-background-blue: hsl(222, 26%, 31%);
-    --color-theme1-keypad-background-blue: hsl(223, 31%, 20%);
-    --color-theme1-screen-background-blue: hsl(224, 36%, 15%);
-    --color-theme1-key-background-blue: hsl(225, 21%, 49%);
-    --color-theme1-key-shadow-background-blue: hsl(224, 28%, 35%);
-    --color-theme1-key-background-red: hsl(6, 63%, 50%);
-    --color-theme1-key-shadow-background-red: hsl(6, 70%, 34%);
-    --color-theme1-key-background-orange: hsl(30, 25%, 89%);
-    --color-theme1-key-shadow-background-orange: hsl(28, 16%, 65%);
-    --color-theme1-text-blue: hsl(221, 14%, 31%);
-    --color-theme1-text-white: hsl(0, 0%, 100%);
+:root.dark {
+    --color-theme-background: hsl(222, 26%, 31%);
+    --color-theme-keypad-background: hsl(223, 31%, 20%);
+    --color-theme-screen-background: hsl(224, 36%, 15%);
+    --color-theme-key-background-1: hsl(225, 21%, 49%);
+    --color-theme-key-shadow-background-1: hsl(224, 28%, 35%);
+    --color-theme-key-background-2: hsl(6, 63%, 50%);
+    --color-theme-key-shadow-background-2: hsl(6, 70%, 34%);
+    --color-theme-key-background-3: hsl(30, 25%, 89%);
+    --color-theme-key-shadow-background-3: hsl(28, 16%, 65%);
+    --color-theme-text-1: hsl(0, 0%, 100%);
+    --color-theme-text-2: hsl(221, 14%, 31%);
 }
 
 * {
@@ -18,16 +18,48 @@
 }
 
 body {
-    background-color: var(--color-theme1-background-blue);
-    color: var(--color-theme1-text-blue);
-    margin: 5% 30%;
+    background-color: var(--color-theme-background);
+    color: var(--color-theme-text-2);
+    margin: 3% 30%;
+    font-family: "League Spartan";
+    font-size: 1.5vw;
 }
 
 header h1 {
     font-size: 5vw;
-    color: var(--color-theme1-text-white);
+    color: var(--color-theme-text-1);
     margin-bottom: 2vw;
     text-align: center;
+    animation: zoom 1s;
+}
+
+@keyframes zoom {
+    from {
+        font-size: 0vw;
+    }
+
+    to {
+        font-size: 5vw;
+    }
+}
+
+article {
+    display: grid; 
+    grid-template-columns: 1fr; 
+    grid-template-rows: 0.2fr 0.1fr 0.3fr;
+}
+
+section {
+    margin: 0 0 1rem 0;
+}
+
+.theme-settings-container {
+    display: grid;
+    grid-template-areas: ". . themes"
+                         "calc label slider";
+    grid-template-columns: 1fr 0.2fr 0.1fr;
+    grid-template-rows: 0.5fr 0.5fr;
+    color: var(--color-theme-text-1);
 }
 
 datalist {
@@ -40,18 +72,374 @@ datalist {
 
 option {
     transform: rotate(270deg);
-    color: var(--color-theme1-text-white);
+}
+
+option[value="1"] {
+    margin-left: 50%; 
+}
+
+option[value="2"], option[value="3"] {
+    margin-left: 15%;
 }
 
 #calc {
-    color: var(--color-theme1-text-white);
+    grid-area: calc;
 }
 
 #theme-label {
-    color: var(--color-theme1-text-white);
+    grid-area: label;
+}
+ 
+datalist + input {
+    grid-area: slider;
+    width: 80%;
+    appearance: none;
+    background-color: var(--color-theme-screen-background);
+    border-radius: 1vw;
+    padding: 0 0.5vw 0 0.5vw;
+    cursor: pointer;
 }
 
-.button {
-    background-color: var(--color-theme1-text-white);
+datalist + input::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    height: 1rem;
+    width: 1rem;
+    border-radius: 100%;
+    background: var(--color-theme-key-background-2);
+}
+
+datalist + input::-webkit-slider-thumb:hover {
+    opacity: 90%;
+}
+
+#numbers {
+    width: 100%;
+    padding: 2vw 0 2vw 0;
+    border: 0.3vw solid var(--color-theme-screen-background);
+    border-radius: 0.5vw;
+    background-color: var(--color-theme-screen-background);
+    color: var(--color-theme-text-1);
+    font-family: "League Spartan";
+    font-size: 3vw;
+    font-weight: bold;
+    text-align: right;
+    cursor: pointer;
+}
+
+#numbers:focus {
+    border: 0.3vw solid var(--color-theme-text-1);
+}
+
+.keypad {
+    display: grid; 
+    grid-template-columns: repeat(4, 1fr); 
+    grid-template-rows: repeat(5, 1fr); 
+    grid-row-gap: 1vw; 
+    grid-column-gap: 1vw;
+    background-color: var(--color-theme-keypad-background);
+    padding: 2vw;
+    border-radius: 1vw;
+    text-align: center;
+}
+
+button {
+    border: 0;
+    background-color: var(--color-theme-key-background-3);
+    font-family: "League Spartan";
+    font-size: 3vw;
+    font-weight: bold;
+    color: var(--color-theme-text-2);
+    cursor: pointer;
+    padding: 1vw;
+    border-radius: 0.5vw;
+    box-shadow: 0vw 0.3vw var(--color-theme-key-shadow-background-3);
+    transition: 0.5s;
+}
+
+button:hover {
+    box-shadow: none;
+    box-shadow: 0 0 1vw black;
+    transform: scale(110%);
+}
+
+#del, #reset {
+    background-color: var(--color-theme-key-background-1);
+    color: var(--color-theme-text-1);
+    box-shadow: 0vw 0.3vw var(--color-theme-key-shadow-background-1);
+}
+
+#del:hover, #reset:hover {
+    opacity: 90%;
+}
+
+#reset {
+    grid-column: 1/ span 2;
+}
+
+#equals {
+    background-color: var(--color-theme-key-background-2);
+    color: var(--color-theme-text-1);
+    box-shadow: 0vw 0.3vw var(--color-theme-key-shadow-background-2);
+    grid-column: 3/ span 2;
+}
+
+#equals:hover {
+    opacity: 90%;
+}
+
+:root.purple {
+    --color-theme-background: hsl(268, 75%, 9%);
+    --color-theme-keypad-screen-background: hsl(268, 71%, 12%);
+    --color-theme-key-background-1: hsl(281, 89%, 26%);
+    --color-theme-key-shadow-background-1: hsl(285, 91%, 52%);
+    --color-theme-key-background-2: hsl(176, 100%, 44%);
+    --color-theme-key-shadow-background-2: hsl(177, 92%, 70%);
+    --color-theme-key-background-3: hsl(268, 47%, 21%);
+    --color-theme-key-shadow-background-3: hsl(290, 70%, 36%);
+    --color-theme-text-1: hsl(0, 0%, 100%);
+    --color-theme-text-2: hsl(198, 20%, 13%);
+    --color-theme-text-3: hsl(52, 100%, 62%);
+}
+
+:root.purple h1, 
+:root.purple datalist, 
+:root.purple #numbers,
+:root.purple button,
+:root.purple .attribution, 
+:root.purple .attribution a {
+    color: var(--color-theme-text-3);
+}
+
+:root.purple input[type="range"], :root.purple #numbers, :root.purple .keypad {
+    background-color: var(--color-theme-keypad-screen-background);
+}
+
+:root.purple #numbers {
+    border: var(--color-theme-key-background-3);
+}
+
+:root.purple button {
+    background-color: var(--color-theme-key-background-3);
+}
+
+:root.purple #del,:root.purple #reset {
+    background-color: var(--color-theme-key-background-1);
+}
+
+
+:root.purple #equals {
+    background-color: var(--color-theme-key-background-2);
+    color: var(--color-theme-text-2);
+}
+
+@media (prefers-color-scheme: light) {
+
+    :root {
+        --color-theme-background: hsl(0, 0%, 90%);
+        --color-theme-keypad-background: hsl(0, 5%, 81%);
+        --color-theme-screen-background: hsl(0, 0%, 93%);
+        --color-theme-key-background-1: hsl(185, 42%, 37%);
+        --color-theme-key-shadow-background-1: hsl(185, 58%, 25%);
+        --color-theme-key-background-2: hsl(25, 98%, 40%);
+        --color-theme-key-shadow-background-2: hsl(25, 99%, 27%);
+        --color-theme-key-background-3: hsl(45, 7%, 89%);
+        --color-theme-key-shadow-background-3: hsl(35, 11%, 61%);
+        --color-theme-text-1: hsl(0, 0%, 100%);
+        --color-theme-text-2: hsl(60, 10%, 19%);
+    }
+
+    :root.purple {
+        --color-theme-background: hsl(268, 75%, 9%);
+        --color-theme-keypad-screen-background: hsl(268, 71%, 12%);
+        --color-theme-key-background-1: hsl(281, 89%, 26%);
+        --color-theme-key-shadow-background-1: hsl(285, 91%, 52%);
+        --color-theme-key-background-2: hsl(176, 100%, 44%);
+        --color-theme-key-shadow-background-2: hsl(177, 92%, 70%);
+        --color-theme-key-background-3: hsl(268, 47%, 21%);
+        --color-theme-key-shadow-background-3: hsl(290, 70%, 36%);
+        --color-theme-text-1: hsl(0, 0%, 100%);
+        --color-theme-text-2: hsl(198, 20%, 13%);
+        --color-theme-text-3: hsl(52, 100%, 62%);
+    }
+
+    :root.purple h1, 
+    :root.purple datalist, 
+    :root.purple #numbers,
+    :root.purple button,
+    :root.purple .attribution, 
+    :root.purple .attribution a {
+        color: var(--color-theme-text-3);
+    }
+
+    :root.purple input[type="range"], :root.purple #numbers, :root.purple .keypad {
+        background-color: var(--color-theme-keypad-screen-background);
+    }
+
+    :root.purple #numbers {
+        border: var(--color-theme-key-background-3);
+    }
+
+    :root.purple button {
+        background-color: var(--color-theme-key-background-3);
+    }
+
+    :root.purple #del, :root.purple #reset {
+        background-color: var(--color-theme-key-background-1);
+    }
+    
+    :root.purple #equals {
+        background-color: var(--color-theme-key-background-2);
+        color: var(--color-theme-text-2);
+    }
+
+    body {
+        background-color: var(--color-theme-background);
+        color: var(--color-theme-text-2);
+    }
+
+    header h1 {
+        color: var(--color-theme-text-2);
+    }
+
+    :root.dark header h1 {
+        color: var(--color-theme-text-1);
+    }
+
+    .theme-settings-container {
+        color: var(--color-theme-text-2);
+    }
+
+    :root.dark .theme-settings-container {
+        color: var(--color-theme-text-1);
+    }
+
+    datalist + input {
+        background-color: var(--color-theme-keypad-background);
+    }
+    
+    datalist + input::-webkit-slider-thumb {
+        background: var(--color-theme-key-background-2);
+    }
+
+    #numbers {
+        border: 0.3vw solid var(--color-theme-screen-background);
+        background-color: var(--color-theme-screen-background);
+        color: var(--color-theme-text-2);
+    }
+
+    :root.dark #numbers {
+        color: var(--color-theme-text-1);
+    }
+    
+    #numbers:focus {
+        border: 0.3vw solid var(--color-theme-text-2);
+    }
+    
+    .keypad {
+        background-color: var(--color-theme-keypad-background);
+    }
+    
+    button {
+        background-color: var(--color-theme-key-background-3);
+        color: var(--color-theme-text-2);
+        box-shadow: 0vw 0.3vw var(--color-theme-key-shadow-background-3);
+    }
+    
+    #del, #reset {
+        background-color: var(--color-theme-key-background-1);
+        box-shadow: 0vw 0.3vw var(--color-theme-key-shadow-background-1);
+    }
+
+    #equals {
+        background-color: var(--color-theme-key-background-2);
+        box-shadow: 0vw 0.3vw var(--color-theme-key-shadow-background-2);
+    }
+
+    footer > .attribution, footer > .attribution a {
+        color: var(--color-theme-text-2);
+    }
+
+    :root.dark footer > .attribution,
+    :root.dark footer > .attribution a {
+        color: var(--color-theme-text-1);
+    }
+}
+
+@media (prefers-color-scheme: dark) {
+
+    :root.light {
+        --color-theme-background: hsl(0, 0%, 90%);
+        --color-theme-keypad-background: hsl(0, 5%, 81%);
+        --color-theme-screen-background: hsl(0, 0%, 93%);
+        --color-theme-key-background-1: hsl(185, 42%, 37%);
+        --color-theme-key-shadow-background-1: hsl(185, 58%, 25%);
+        --color-theme-key-background-2: hsl(25, 98%, 40%);
+        --color-theme-key-shadow-background-2: hsl(25, 99%, 27%);
+        --color-theme-key-background-3: hsl(45, 7%, 89%);
+        --color-theme-key-shadow-background-3: hsl(35, 11%, 61%);
+        --color-theme-text-1: hsl(0, 0%, 100%);
+        --color-theme-text-2: hsl(60, 10%, 19%);
+    }
+
+    :root.light header h1 {
+        color: var(--color-theme-text-2);
+    }
+
+    :root.light .theme-settings-container {
+        color: var(--color-theme-text-2);
+    }
+
+    :root.light footer > .attribution, 
+    :root.light footer > .attribution a {
+        color: var(--color-theme-text-2);
+    }
 
 }
+
+@media screen and (max-width: 820px) {
+    body {
+        margin: 3% 10%;
+    }
+
+    header h1 {
+        font-size: 10vw;
+        margin-bottom: 5vw;
+    }
+
+    @keyframes zoom {
+        from {
+            font-size: 0vw;
+        }
+    
+        to {
+            font-size: 10vw;
+        }
+    }
+
+    .theme-settings-container {
+        font-size: 4vw;
+        grid-template-columns: 1fr 0.3fr 0.1fr;
+    }
+
+    option[value="1"] {
+        margin-left: 25%;
+    }
+
+    #numbers {
+        padding: 5vw 0 5vw 0;
+    }
+
+    button {
+        padding: 3vw;
+        margin: 1vw;
+        font-size: 5vw;
+    }
+
+}
+
+@media screen and (max-width: 426px) {
+    
+    button {
+        padding: 4vw;
+    }
+} 
